--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,6 @@
     </a>
 
     <p class="extra">
-        <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a>
-        by
-        <a class="link" href="https://github.com/sergiokopplin/indigo">Kopplin</a>
+        <a>Powered by Indigo theme</a>
     </p>
 </footer>
