--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -7,9 +7,9 @@
         </a>
     {% endif %}
 
-    {% if site.twitter %}
-        <a class="link" data-title="twitter.com/{{ site.twitter }}" href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">
-            <i class="fa-brands fa-twitter"></i>
+    {% if site.weibo %}
+        <a class="link" data-title="weibo.com/u/{{ site.weibo }}" href="https://weibo.com/u/{{ site.weibo }}" target="_blank" rel="noopener">
+            <i class="fa-brands fa-weibo"></i>
         </a>
     {% endif %}
 
@@ -25,11 +25,11 @@
         </a>
     {% endif %}
 
-    {% if site.github %}
+    <!-- {% if site.github %}
         <a class="link" data-title="github.com/{{ site.github }}" href="https://github.com/{{ site.github }}" target="_blank"  rel="noopener">
             <i class="fa-brands fa-github"></i>
         </a>
-    {% endif %}
+    {% endif %} -->
 
     {% if site.email %}
         <a class="link" data-title="{{ site.email }}" href="mailto:{{ site.email }}"  rel="noopener">
